# FULiveDemoDroid

./: README.md  blur.glsl  build.gradle
app/: build.gradle
app/src/main/assets/shader/: Actor.glsl  External_LR.glsl  External_RGB.glsl  External_RGB_Alpha.glsl  Opaque.glsl  Text.glsl  TextureAlpha.glsl  Vertex.glsl
app/src/main/cpp/: CMakeLists.txt  YUV.cpp
app/src/main/java/com/android/glutil/: YUV.java
app/src/main/java/com/faceunity/fulivedemo/activity/: BgSegGreenActivity.java  FUBaseActivity.java  PosterChangeFaceActivity.java  ShowPhotoActivity.java
app/src/main/java/com/faceunity/fulivedemo/async/: GL2Event.java  GL2EventSetBitmap.java  GL2EventSetLayout.java
app/src/main/java/com/faceunity/fulivedemo/drawobject/: DrawActor.java  DrawBitmap.java  DrawGIF.java  DrawObject.java  DrawText.java  DrawTextureAlpha.java  DrawVideo.java  DrawVideoAlpha.java  DrawVideoLR.java  GL2VideoTexture.java  ShaderActor.java  ShaderAlpha.java  ShaderAlphaExternal.java  ShaderAlphaLRExternal.java  ShaderOpaque.java  ShaderOpaqueExternal.java  ShaderText.java
app/src/main/java/com/faceunity/fulivedemo/gl/: GL2FBO.java  GL2FloatBuffer.java  GL2Surface.java  GL2Texture.java  GLClass.java  GLPBO.java  Matrix4f.java  QuadUV.java  RenderLayout.java  ShaderModule.java
app/src/main/java/com/faceunity/fulivedemo/renderer/: BaseCameraRenderer.java  Camera1Renderer.java  Camera2Renderer.java  DrawManager.java  PhotoRenderer.java  (+2 more)
app/src/main/res/layout/: activity_fu_base.xml
app/src/main/res/values/: colors.xml
docs/: Android_Nama_SDK_集成指导文档.md
faceunity/: build.gradle
faceunity/src/main/java/com/faceunity/: FURenderer.java  authpack.java
faceunity/src/main/java/com/faceunity/utils/: LogUtils.java  VideoDecoder.java
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
